--- a/ViewConnect/app/src/main/res/layout/profile_display.xml
+++ b/ViewConnect/app/src/main/res/layout/profile_display.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="130dp">
 
+<!--create compnents of recycler view-->
     <androidx.cardview.widget.CardView
         android:id="@+id/profilePic"
         android:layout_width="70dp"
@@ -56,7 +57,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="26.58dp"
                 android:layout_marginTop="18.72dp"
-                android:text="TextView"
+                android:textAppearance="@style/general_text_style"
+                android:text="@string/textview"
+                android:textSize="14dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:layout_editor_absoluteX="114dp"
@@ -68,7 +71,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50.49dp"
                 android:layout_marginTop="46.17dp"
+                android:textAppearance="@style/general_text_style"
                 android:text="@string/date"
+                android:textSize="14dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:layout_editor_absoluteX="16dp" />
@@ -79,7 +84,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50.21dp"
                 android:layout_marginTop="70.55dp"
+                android:textAppearance="@style/general_text_style"
                 android:text="@string/daysLeft"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:layout_editor_absoluteX="28dp" />
