--- a/ViewConnect/app/src/main/res/values/colors.xml
+++ b/ViewConnect/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="font_color_day">#393939</color>
+    <color name = "background_color_day">#9ACFD6</color>
+    <color name="font_color_night">#EF6C00</color>
+    <color name = "background_color_night">#424242</color>
 </resources>
